feat: payment module added, plus php webhook config

--- a/src/email/templates/booking-receipt.html
+++ b/src/email/templates/booking-receipt.html
@@ -117,10 +117,11 @@
         <p style="font-size: 14px; color: #856404;">
           <b><i>RECUERDE QUE PARA ASEGURAR SU RESERVA, ES REQUERIDO EL PAGO ANTICIPADO.
           DE LO CONTRARIO, SU RESERVA PODRÍA SER REEMPLAZADA</i></b>
+          <b><i>EN CASO DE YA HABER PAGADO, HAGA CASO OMISO</i></b>
         </p>
-        <div style="background-color: #f9f9f9; padding: 20px; margin: 20px; border-radius: 8px; text-align: center; box-shadow: 0 1px 4px rgba(0,0,0,0.05);">
+        <div style="display:flex; flex-direction: column; background-color: #f9f9f9; padding: 20px; margin: 20px; border-radius: 8px; text-align: center; box-shadow: 0 1px 4px rgba(0,0,0,0.05);">
           <a href="https://checkout.wompi.co/l/test_VPOS_lkhodq" style="color: #1e88e5;">Si el qr no funciona, ingresa a este link</a>
-          <img src="../../public/qr-bancolombia.png" alt="Volante de Pago" style="max-width: 100%; height: auto; border-radius: 6px; border: 1px solid #ddd;"/>
+          <img src="../../assets/qr-bancolombia.png" alt="Volante de Pago" style="max-width: 100%; height: auto; border-radius: 6px; border: 1px solid #ddd;"/>
         </div>
       </div>
     <div class="footer">
